// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<button
    aria-disabled="true"
    class="e1kgqxfn0 cache-1me4bek"
    disabled=""
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly on focus 1`] = `
<DocumentFragment>
  .cache-1dhr51f {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1dhr51f.cache-1dhr51f:active {
  opacity: 0.7;
}

.cache-1dhr51f[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1dhr51f[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1dhr51f[aria-disabled='false']:active {
  opacity: 0.7;
}

<button
    aria-disabled="false"
    class="e1kgqxfn0 cache-1dhr51f"
    tabindex="0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly with a non default as and type 1`] = `
<DocumentFragment>
  .cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<div
    aria-disabled="false"
    class="e1kgqxfn0 cache-1me4bek"
    type="button"
  >
    Button Touchable
  </div>
</DocumentFragment>
`;

exports[`Touchable renders correctly with defaults 1`] = `
<DocumentFragment>
  .cache-1me4bek {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-1me4bek[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1me4bek[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

<button
    aria-disabled="false"
    class="e1kgqxfn0 cache-1me4bek"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;
